--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   }
 
   #gameContainer{
-    font-family: "Permanent Marker",cursive;
+    font-family: "Permanent Marker",Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     margin-top: 15vh;
   }
@@ -42,14 +42,14 @@
   }
   @media screen and (max-width: 750px) {
      button {
-      font-size: 11px;
+      font-size: 10px;
     }
   
   }
   
   @media screen and (max-width: 450px) {
     button {
-      font-size: 9px;
+      font-size: 8px;
     }
   
   }
